--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tic Tac Toe</title>
+    <title>Jogo da Velha</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section>
-      <h1 class="game--title">Tic Tac Toe</h1>
+      <h1 class="game--title">Jogo da Velha</h1>
       <div class="game--container">
         <div data-cell-index="0" class="cell"></div>
         <div data-cell-index="1" class="cell"></div>
@@ -25,9 +25,10 @@
         <div data-cell-index="8" class="cell"></div>
       </div>
       <h2 class="game--status"></h2>
+      <div class="piscar"></div>
       <button class="game--restart">Reiniciar</button>
     </section>
-    <footer>Criado por Rafael Kasper s3</footer>
+    <footer>&copy; 2023 Jéssica Schmidt | Analise e Desenvolvimento de Sistemas</footer>
     <script src="script.js"></script>
   </body>
 </html>
